[FEATURE] per question checklist analysis

--- a/psc/templates/psc/eday_checklist_analysis.html
+++ b/psc/templates/psc/eday_checklist_analysis.html
@@ -67,7 +67,7 @@
                     </tr>
                 </thead>
                     <tr class="mid">
-                        <th>AA</th>
+                        <th><a href="{% url eday_question_analysis 'AA' %}">AA</a></th>
                         <td>{{ question.AA.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.AA.n }}</td>
@@ -85,7 +85,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>BF</th>
+                        <th><a href="{% url eday_question_analysis 'BF' %}">BF</a></th>
                         <td>{{ question.BF.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BF.n }}</td>
@@ -103,7 +103,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>BK</th>
+                        <th><a href="{% url eday_question_analysis 'BK' %}">BK</a></th>
                         <td>{{ question.BK.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BK.n }}</td>
@@ -121,7 +121,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>BN</th>
+                        <th><a href="{% url eday_question_analysis 'BN' %}">BN</a></th>
                         <td>{{ question.BN.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BN.n }}</td>
@@ -139,7 +139,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CB</th>
+                        <th><a href="{% url eday_question_analysis 'CB' %}">CB</a></th>
                         <td>{{ question.CB.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CB.n }}</td>
@@ -157,7 +157,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CF</th>
+                        <th><a href="{% url eday_question_analysis 'CF' %}">CF</a></th>
                         <td>{{ question.CF.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CF.n }}</td>
@@ -175,7 +175,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CG</th>
+                        <th><a href="{% url eday_question_analysis 'CG' %}">CG</a></th>
                         <td>{{ question.CG.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CG.n }}</td>
@@ -193,7 +193,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CH</th>
+                        <th><a href="{% url eday_question_analysis 'CH' %}">CH</a></th>
                         <td>{{ question.CH.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CH.n }}</td>
@@ -211,7 +211,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CJ</th>
+                        <th><a href="{% url eday_question_analysis 'CJ' %}">CJ</a></th>
                         <td>{{ question.CJ.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CJ.n }}</td>
@@ -229,7 +229,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CK</th>
+                        <th><a href="{% url eday_question_analysis 'CK' %}">CK</a></th>
                         <td>{{ question.CK.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CK.n }}</td>
@@ -247,7 +247,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CM</th>
+                        <th><a href="{% url eday_question_analysis 'CM' %}">CM</a></th>
                         <td>{{ question.CM.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CM.n }}</td>
@@ -265,7 +265,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CN</th>
+                        <th><a href="{% url eday_question_analysis 'CN' %}">CN</a></th>
                         <td>{{ question.CN.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CN.n }}</td>
@@ -283,7 +283,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CP</th>
+                        <th><a href="{% url eday_question_analysis 'CP' %}">CP</a></th>
                         <td>{{ question.CP.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CP.n }}</td>
@@ -301,7 +301,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CQ</th>
+                        <th><a href="{% url eday_question_analysis 'CQ' %}">CQ</a></th>
                         <td>{{ question.CQ.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CQ.n }}</td>
@@ -340,7 +340,7 @@
                     </tr>
                 </thead>
                     <tr class="mid">
-                        <th>BC</th>
+                        <th><a href="{% url eday_question_analysis 'BC' %}">BC</a></th>
                         <td>{{ question.BC.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BC.n }}</td>
@@ -384,7 +384,7 @@
                     </tr>
                 </thead>
                     <tr class="mid">
-                        <th>BA</th>
+                        <th><a href="{% url eday_question_analysis 'BA' %}">BA</a></th>
                         <td>{{ question.BA.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BA.n }}</td>
@@ -429,7 +429,7 @@
                     </tr>
                 </thead>
                     <tr class="mid">
-                        <th>CA</th>
+                        <th><a href="{% url eday_question_analysis 'CA' %}">CA</a></th>
                         <td>{{ question.CA.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CA.n }}</td>
@@ -479,7 +479,7 @@
                     </tr>
                 </thead>
 					<tr class="mid">
-                        <th>BG</th>
+                        <th><a href="{% url eday_question_analysis 'BG' %}">BG</a></th>
                         <td>{{ question.BG.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BG.n }}</td>
@@ -506,7 +506,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>BH</th>
+                        <th><a href="{% url eday_question_analysis 'BH' %}">BH</a></th>
                         <td>{{ question.BH.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BH.n }}</td>
@@ -533,7 +533,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>BJ</th>
+                        <th><a href="{% url eday_question_analysis 'BJ' %}">BJ</a></th>
                         <td>{{ question.BJ.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BJ.n }}</td>
@@ -560,7 +560,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>BM</th>
+                        <th><a href="{% url eday_question_analysis 'BM' %}">BM</a></th>
                         <td>{{ question.BM.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.BM.n }}</td>
@@ -587,7 +587,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CC</th>
+                        <th><a href="{% url eday_question_analysis 'CC' %}">CC</a></th>
                         <td>{{ question.CC.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CC.n }}</td>
@@ -614,7 +614,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CD</th>
+                        <th><a href="{% url eday_question_analysis 'CD' %}">CD</a></th>
                         <td>{{ question.CD.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CD.n }}</td>
@@ -641,7 +641,7 @@
 						</table></td>
                     </tr>
 					<tr class="mid">
-                        <th>CE</th>
+                        <th><a href="{% url eday_question_analysis 'CE' %}">CE</a></th>
                         <td>{{ question.CE.label }}</td>
                         <td>{{ question.no_of_checklists }}</td>
                         <td>{{ question.CE.n }}</td>
@@ -686,7 +686,7 @@
                     </tr>
                 </thead>
                 <tr>
-                    <td>BD</td>
+                    <td><a href="{% url eday_question_analysis 'BD' %}">BD</a></td>
                     <td>{{ question.BD.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.BD.n }}</td>
@@ -697,7 +697,7 @@
                     <td>{{ question.BD.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>BE</td>
+                    <td><a href="{% url eday_question_analysis 'BE' %}">BE</a></td>
                     <td>{{ question.BE.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.BE.n }}</td>
@@ -708,7 +708,7 @@
                     <td>{{ question.BE.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>BP</td>
+                    <td><a href="{% url eday_question_analysis 'BP' %}">BP</a></td>
                     <td>{{ question.BP.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.BP.n }}</td>
@@ -719,7 +719,7 @@
                     <td>{{ question.BP.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>DA</td>
+                    <td><a href="{% url eday_question_analysis 'DA' %}">DA</a></td>
                     <td>{{ question.DA.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.DA.n }}</td>
@@ -730,7 +730,7 @@
                     <td>{{ question.DA.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>DB</td>
+                    <td><a href="{% url eday_question_analysis 'DB' %}">DB</a></td>
                     <td>{{ question.DB.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.DB.n }}</td>
@@ -741,7 +741,7 @@
                     <td>{{ question.DB.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>DC</td>
+                    <td><a href="{% url eday_question_analysis 'DC' %}">DC</a></td>
                     <td>{{ question.DC.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.DC.n }}</td>
@@ -752,7 +752,7 @@
                     <td>{{ question.DC.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>DD</td>
+                    <td><a href="{% url eday_question_analysis 'DD' %}">DD</a></td>
                     <td>{{ question.DD.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.DD.n }}</td>
@@ -763,7 +763,7 @@
                     <td>{{ question.DD.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>DE</td>
+                    <td><a href="{% url eday_question_analysis 'DE' %}">DE</a></td>
                     <td>{{ question.DE.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.DE.n }}</td>
@@ -774,7 +774,7 @@
                     <td>{{ question.DE.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>DF</td>
+                    <td><a href="{% url eday_question_analysis 'DF' %}">DF</a></td>
                     <td>{{ question.DF.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.DF.n }}</td>
@@ -785,7 +785,7 @@
                     <td>{{ question.DF.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>DG</td>
+                    <td><a href="{% url eday_question_analysis 'DG' %}">DG</a></td>
                     <td>{{ question.DG.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.DG.n }}</td>
@@ -796,7 +796,7 @@
                     <td>{{ question.DG.mean|floatformat:2 }}</td>
                 </tr>
 				<tr>
-                    <td>DH</td>
+                    <td><a href="{% url eday_question_analysis 'DH' %}">DH</a></td>
                     <td>{{ question.DH.label }}</td>
                     <td>{{ question.no_of_checklists }}</td>
                     <td>{{ question.DH.n }}</td>
