--- a/psc/templates/psc/home.html
+++ b/psc/templates/psc/home.html
@@ -89,7 +89,7 @@
 		    		<tr>
 					 <td width="50%">
                             <div class="box compartment">
-                                <h2 class="dashboard-header"><a href="#">EDAY Checklists </a></h2>
+                                <h2 class="dashboard-header"><a href="#">EDAY Checklists</a></h2>
                                  <div class="dash-row">
                                      <div class="dash-column first">1st SMS</div>
                                      <div class="dash-column second">
@@ -138,7 +138,7 @@
                                      </div>
                                 </div>
                                 <div class="dash-row last">
-                                     <div class="dash-text">{% if perms.psc.can_manage_data %}<a href="{% url psc.views.eday_checklist_list %}">(View All)</a>{% endif %}</div>
+                                     <div class="dash-text">{% if perms.psc.can_manage_data %}<a href="{% url eday_checklist_view %}">(View All)</a>{% endif %}</div>
                                 </div>
                                 <div class="clear"></div>
                             </div>
