The eday result analysis page was just added and every related pages were adjusted to accommodate the needs od the addition. This is a work in progress as other adjustments would still be made to allow for a better presentation of result analysis.

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -90,6 +90,11 @@
                                 <a href="{% url psc.views.eday_checklist_analysis %}">Checklist Analyses</a>
                             </li>
 							{% endif %}
+							{% if perms.psc.can_analyse %}
+                            <li>
+                                <a href="{% url psc.views.eday_result_analysis %}">Result Analyses</a>
+                            </li>
+							{% endif %}
                         </ul>
                     </li>{% endif %}
 					{% if perms.psc.view_observer %}
