--- a/psc/templates/psc/eday_result_analysis.html
+++ b/psc/templates/psc/eday_result_analysis.html
@@ -58,7 +58,7 @@
 			</tr>
 		    </thead>
 			{% for zone in turnout.zones %}
-			<tr>
+			<tr {% cycle '' 'class="odd"' %}>
 			    <td>{{ zone.name }}</td>
 			    <td>{{ zone.N }}</td>
 			    <td>{{ zone.n }}</td>
@@ -70,12 +70,50 @@
 			{% endfor %}
 			<tr>
 			    <th>Totals</th>
-			    <th>{{ turnout.totals.N }}</th>
-			    <th>{{ turnout.totals.n }}</th>
-			    <th>{{ turnout.totals.n|percentage:turnout.totals.N }}</th>
-			    <th>{{ turnout.totals.RV }}</th>
-			    <th>{{ turnout.totals.T }}</th>
-			    <th>{{ turnout.totals.T|percentage:turnout.totals.RV }}</th>
+			    <th>{{ turnout.zone.totals.N }}</th>
+			    <th>{{ turnout.zone.totals.n }}</th>
+			    <th>{{ turnout.zone.totals.n|percentage:turnout.zone.totals.N }}</th>
+			    <th>{{ turnout.zone.totals.RV }}</th>
+			    <th>{{ turnout.zone.totals.T }}</th>
+			    <th>{{ turnout.zone.totals.T|percentage:turnout.zone.totals.RV }}</th>
+			</tr>
+		</table>
+	</div>
+    </div>
+	<div class="box">
+	<h2><strong>Turnout Analysis for State</strong></h2>
+	<div class="block">
+		<table width="100%" class="summary">
+		    <thead>
+			<tr>
+			    <th>State</th>
+			    <th>N</th>
+			    <th>n</th>
+			    <th>n%</th>
+			    <th>RV</th>
+			    <th>T</th>
+			    <th>T%</th>
+			</tr>
+		    </thead>
+			{% for state in turnout.states %}
+			<tr {% cycle '' 'class="odd"' %}>
+			    <td>{{ state.name }}</td>
+			    <td>{{ state.N }}</td>
+			    <td>{{ state.n }}</td>
+			    <td>{{ state.n|percentage:state.N }}</td>
+			    <td>{{ state.RV }}</td>
+			    <td>{{ state.T }}</td>
+			    <td>{{ state.T|percentage:state.RV }}</td>
+			</tr>
+			{% endfor %}
+			<tr>
+			    <th>Totals</th>
+			    <th>{{ turnout.state.totals.N }}</th>
+			    <th>{{ turnout.state.totals.n }}</th>
+			    <th>{{ turnout.state.totals.n|percentage:turnout.state.totals.N }}</th>
+			    <th>{{ turnout.state.totals.RV }}</th>
+			    <th>{{ turnout.state.totals.T }}</th>
+			    <th>{{ turnout.state.totals.T|percentage:turnout.state.totals.RV }}</th>
 			</tr>
 		</table>
 	</div>
@@ -98,7 +136,7 @@
 			</tr>
 		    </thead>
 			{% for party in party_codes %}
-			<tr>
+			<tr {% cycle '' 'class="odd"' %}>
 			    <td>{{ party_names|key_value:party }}</td>
 			{% with results.national|key_value:party|key_value:'N' as en %}
 			    <td>{{ results.national|key_value:party|key_value:'n' }}</td>
@@ -119,7 +157,7 @@
 	</div>
     </div>
     <div class="box">
-	<h2><strong>Qualitative Analysis for Zone</strong></h2>
+	<h2><strong>Qualitative Analysis for Zones</strong></h2>
 	<div class="block">
 		<table width="100%" class="summary">
 		    <thead>
@@ -139,13 +177,13 @@
 			</tr>
 		    </thead>
 			{% for party in party_codes %}
-			<tr>
+			<tr {% cycle '' 'class="odd"' %}>
 			    <td>{{ party_names|key_value:party }}</td>
 			{% for zone in results.zones %}
-			{% with results.parties|key_value:party|key_value:zone|key_value:'N' as en %}
-			    <td>{{ results.parties|key_value:party|key_value:zone|key_value:'n' }}</td>
-				<td>{{ results.parties|key_value:party|key_value:zone|key_value:'n'|percentage:en }}</td>
-				<td>{{ results.parties|key_value:party|key_value:zone|key_value:'moe95'|stringformat:'.2f'|default:"0" }}%</td>
+			{% with results.zone.parties|key_value:party|key_value:zone|key_value:'N' as en %}
+			    <td>{{ results.zone.parties|key_value:party|key_value:zone|key_value:'n' }}</td>
+				<td>{{ results.zone.parties|key_value:party|key_value:zone|key_value:'n'|percentage:en }}</td>
+				<td>{{ results.zone.parties|key_value:party|key_value:zone|key_value:'moe95'|stringformat:'.2f'|default:"0" }}%</td>
 			{% endwith %}
 			{% endfor %}
 			</tr>
@@ -153,11 +191,49 @@
 			<tr>
 			    <th>Totals</th>
 			{% for zone in results.zones %}
-			{% with results.parties|key_value:'EA'|key_value:zone|key_value:'N' as en %}
-			    <th>{{ results.parties|key_value:'EA'|key_value:zone|key_value:'N' }}</th>
+			    <th>{{ results.zone.party_totals|key_value:zone|key_value:'n' }}</th>
 				<th>100%</th>
 				<th>&nbsp;</th>
+			{% endfor %}
+			</tr>
+		</table>
+	</div>
+    </div>
+	<div class="box">
+	<h2><strong>Qualitative Analysis for States</strong></h2>
+	<div class="block">
+		<table width="100%" class="summary">
+		    <thead>
+			<tr>
+			    <th>Party</th>
+				{% for state in results.states  %}
+			    <th colspan="3">{{ state }}</th>
+				{% endfor %}
+			</tr>
+			<tr>
+			    <th>&nbsp;</th>
+				{% for state in results.states  %}
+			    <th>n</th>
+			    <th>n%</th>
+				{% endfor %}
+			</tr>
+		    </thead>
+			{% for party in party_codes %}
+			<tr {% cycle '' 'class="odd"' %}>
+			    <td>{{ party_names|key_value:party }}</td>
+			{% for state in results.states %}
+			{% with results.state.parties|key_value:party|key_value:state|key_value:'N' as en %}
+			    <td>{{ results.state.parties|key_value:party|key_value:state|key_value:'n' }}</td>
+				<td>{{ results.state.parties|key_value:party|key_value:state|key_value:'n'|percentage:en }}</td>
 			{% endwith %}
+			{% endfor %}
+			</tr>
+			{% endfor %}
+			<tr>
+			    <th>Totals</th>
+			{% for state in results.states %}
+			    <th>{{ results.state.party_totals|key_value:state|key_value:'n'|default:"0" }}</th>
+				<th>100%</th>
 			{% endfor %}
 			</tr>
 		</table>
