--- a/psc/templates/psc/messenger.html
+++ b/psc/templates/psc/messenger.html
@@ -1,8 +1,8 @@
 <div id="messenger" style="display:none">
     <table>
     <tr>
-	<td style="vertical-align:top;padding-left:1em" width="15%">You are about to send to <strong>{{ msg_recipients|length|default:"0" }}</strong> recipients</td>
-	<td width="20%"><input type="hidden" name="to" value="{{ msg_recipients|join:"," }}" id="to" /><textarea id="msg" cols="30" rows="5"></textarea><br /><button id="send_btn">Send</button> <img style="display:none" src="/assets/img/ajax-loader.gif" alt="sending..." id="ajax-loader" /></td>
+	<td style="vertical-align:top;padding-left:1em" width="15%">You are about to send to <strong>{{ request.session.msg_recipients|length|default:"0" }}</strong> recipients</td>
+	<td width="20%"><textarea id="msg" cols="30" rows="5"></textarea><br /><button id="send_btn">Send</button> <img style="display:none" src="/assets/img/ajax-loader.gif" alt="sending..." id="ajax-loader" /></td>
 	<td style="vertical-align:top"><span style="padding-top:10px">Credits:<h1>{{ credits|default:"0" }}</h1></span></td>
     </tr>
     </table>
