slight interface improvements

--- a/psc/templates/psc/eday_cumulative_chart.html
+++ b/psc/templates/psc/eday_cumulative_chart.html
@@ -43,14 +43,16 @@
         </div>
     </div>
     <div class="box">
-		<div class="block">
-		<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase=http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" width="850" height="600" id="MSLine" >
-         <param name="movie" value="/assets/fc/FCF_MSLine.swf" />
-         <param name="FlashVars" value="&dataURL=/charts/xml/convergence&chartWidth=850&chartHeight=600">
-         <param name="quality" value="high" />
-         <embed src="/assets/fc/FCF_MSLine.swf" flashVars="&dataURL=/charts/xml/convergence&chartWidth=800&chartHeight=600" quality="high" width="850" height="600" name="Line" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
-      </object>
-		</div>
+        <div class="block" style="padding:0">
+            <div style="width:850px;margin:0 auto">
+                <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase=http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" width="850" height="600" id="MSLine">
+                 <param name="movie" value="/assets/fc/FCF_MSLine.swf" />
+                 <param name="FlashVars" value="dataURL=/charts/xml/convergence&chartWidth=850&chartHeight=600">
+                 <param name="quality" value="high" />
+                 <embed src="/assets/fc/FCF_MSLine.swf" flashVars="dataURL=/charts/xml/convergence&chartWidth=850&chartHeight=600" quality="high" width="850" height="600" name="Line" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+                </object>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
