A new entry for the analysis of gubernatorial results was made; this necessitated altering existing files and adding a new url link. The code as at the time of pushing has obvious bugs but would be resolved and then updated as required.

--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -97,6 +97,11 @@
 							{% endif %}
 							{% if perms.psc.can_view_result %}
                             <li>
+                                <a href="{% url psc.views.eday_guberresult_analysis %}">Gubernatorial Result Analyses</a>
+                            </li>
+							{% endif %}
+							{% if perms.psc.can_view_result %}
+                            <li>
                                 <a href="{% url eday_convergence_chart %}">Results Convergence Chart</a>
                             </li>
 							{% endif %}
